--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.4.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
     <groupId>com.wdl.gmall0218</groupId>
     <artifactId>gmall0218-parent</artifactId>
     <packaging>pom</packaging>
@@ -11,6 +16,7 @@
     <modules>
         <module>gmall0218-common</module>
         <module>gmall0218-mocker</module>
+        <module>gmall0218-logger</module>
     </modules>
 
     <properties>
