--- a/gmall0218-realTime/pom.xml
+++ b/gmall0218-realTime/pom.xml
@@ -36,7 +36,6 @@
             <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
         </dependency>
 
-
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
@@ -70,9 +69,13 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.11</artifactId>
-
         </dependency>
 
+        <dependency>
+            <groupId>org.json4s</groupId>
+            <artifactId>json4s-native_2.11</artifactId>
+            <version>3.5.4</version>
+        </dependency>
 
     </dependencies>
     <build>
