--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
         <module>gmall0218-mocker</module>
         <module>gmall0218-logger</module>
         <module>gmall0218-realTime</module>
+        <module>gmall0218-publisher</module>
+        <module>dw-chart</module>
+        <module>gmall0218-canal</module>
     </modules>
 
     <properties>
@@ -110,6 +113,25 @@
                 <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
                 <version>${spark.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.searchbox</groupId>
+                <artifactId>jest</artifactId>
+                <version>5.3.3</version>
+
+            </dependency>
+
+            <dependency>
+                <groupId>net.java.dev.jna</groupId>
+                <artifactId>jna</artifactId>
+                <version>4.5.2</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.codehaus.janino</groupId>
+                <artifactId>commons-compiler</artifactId>
+                <version>2.7.8</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
